<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/list"
        app:layout_constraintEnd_toStartOf="@+id/action_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.33"
        app:showAsAction="ifRoom" >
    </item>

    <item
        android:id="@+id/action_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/map"
        app:layout_constraintEnd_toStartOf="@+id/action_about"
        app:layout_constraintStart_toEndOf="@+id/action_list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.34"
        app:showAsAction="ifRoom" >
    </item>

    <item
        android:id="@+id/action_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/action_map"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.33"
        app:showAsAction="ifRoom" >
    </item>
</menu>